# SoapyIC-R8600

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SoapyICR8600.cpp
SwiftCore/: Package.swift
SwiftCore/Sources/CICR8600Core/: dummy.c
SwiftCore/Sources/CICR8600Core/include/: icr8600_core.h
SwiftCore/Sources/ICR8600Core/: ICR8600Core.swift
